feat: Add Wallet Attestation creation integrated with assertion validation
Refs: SIW-970
